--- a/src/app/shared/Card/card.module.css
+++ b/src/app/shared/Card/card.module.css
@@ -1,18 +1,21 @@
-/* Card.Container = styled.div`
+.container {
   box-shadow: 0px 2px 18px -4px rgba(0, 0, 0, 0.75);
   display: flex;
   border-radius: 0.25rem;
   flex-flow: column wrap;
   transition: box-shadow 0.5s;
-  &:hover {
+}
+
+.container:hover {
     cursor: pointer;
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-  }
-`
+}
 
-Card.Content = styled.div`
+
+
+.card_content {
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
   padding: 1rem 1rem 0.5rem;
-` */
+}
