--- a/src/app/shared/CardList/card_list.module.css
+++ b/src/app/shared/CardList/card_list.module.css
@@ -3,9 +3,8 @@
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   grid-row-gap: 2rem;
   grid-column-gap: 2rem;
-  padding: 4rem;
 }
 
-.root{
+.wrapper{
   margin: 4rem;
 }
